# CrowdSky

./: .gitignore  history.md  readme.md  schema.sql  upload.py
docs/: README.md  api-reference.md  architecture.md  configuration.md  database.md  deployment.md  faq.md  php-reference.md  server-deployment.md  wishlist.md  worker-reference.md
web/: auth.php  config.example.php  db.php  download.php  finalize.php  fits_utils.php  index.php  login.php  stacks.php  status.php  upload.php  webdav.php
web/api/: cleanup.php  complete_job.php  delete_job.php  download_raw.php  fail_job.php  job_files.php  next_job.php  stacks_data.php
web/assets/css/: style.css
web/templates/: footer.php  header.php
worker/: .env.example  __main__.py  api_client.py  config.py  crowdsky-worker.service  job_processor.py  main.py  pyproject.toml  requirements.txt  setup-service.sh  stacking_adapter.py  thumbnail.py  webdav.py
